# mRNArchitect

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Dockerfile.old  LICENSE  README.md  TERMS.md  TERMS_AND_CONDITIONS.md  app.R  app.config.ts  biome.json  docker-compose.yaml  functions.R  global.R  justfile  package.json  playwright-deploy.config.ts  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  test.txt  tsconfig.json  vite.config.ts
.github/scripts/: deploy-lambda-version.py  prune-lambda-versions.py
.github/workflows/: build-and-push.yml  build-package.yaml  build-push-and-deploy.yml  deploy.yml  e2e.yml  pr.yml  test.yml
data/: example_results.csv  example_sequence.fa  organisms.json  uniprot-100.json  uniprot-100.txt
docker/: Dockerfile.CUSTOM  Dockerfile.CodonBERT  Dockerfile.CodonTransformer  Dockerfile.DeepCodon  Dockerfile.GEMORNA  Dockerfile.LinearDesign  Dockerfile.RiboDecode  Dockerfile.gemorna  codon-transformer.py  custom-run.py
e2e/: nav.spec.ts  optimize.spec.ts  optimizer.spec.ts
frontend/: biome.json  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
notebooks/: Untitled-Copy1.ipynb  Untitled.ipynb
notebooks/.virtual_documents/: Untitled-Copy1.ipynb  Untitled.ipynb
notebooks/comparison/: cas_9.csv  combined.csv  generate-genetic.ipynb  generate-mRNArchitect.ipynb  genetic.csv  lineardesign.csv  mRNArchitect.csv  mfe.ipynb  plot.ipynb
notebooks/experiment/: 1-data.ipynb  2-analyze.ipynb  3-plot.ipynb  antibody_monoclonal_aa_seqs.fasta  ccds-100.csv  ena_cancer_vaccine_seq.fa  ena_car-t_nt_seq.fa  ensemble-ccds-100.csv  ensemble-ccds-1000.csv  generate.ipynb  hrt_hk_nt_seq_pulled_from_ensembl.fa  iedb_antigen_aa_seqs.fa
notebooks/gemorna/: cai.csv  gc.csv  gemorna-2.ipynb  gemorna.ipynb  mRNArchitect.csv  mRNArchitect.ipynb  mfe.ipynb  normalized-mfe.csv
notebooks/generate-algorithm/: 1-generate.ipynb
notebooks/paper-analysis/: 0-gc-cai-analysis.ipynb  1 - Parse input.ipynb  1-optimise.ipynb  2.1-hydrate-mfe.ipynb  2.2-hydrate-gc.ipynb
public/: TERMS_AND_CONDITIONS.md
scripts/: optimize.py
src/: cli.py  constants.py  global-middleware.ts  organism.py  routeTree.gen.ts  sequence.py  start.ts
src/constants/: index.ts
src/data/: restriction-sites.json
src/mrnarchitect/: analyze.py  app.py  cli.py  (+4 more)
tools/: cli.py  constants.py  nucleic_acid.py  organism.py  sequence.py  types.py
www/: custom.css
(+139 files in other folders)
