[project]
name = "tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "biopython>=1.85",
  "boto3>=1.40.55",
  "dnachisel>=3.2.16",
  "msgspec>=0.19.0",
  "plotnine>=0.15.0",
  "polars[all]>=1.34.0",
  "viennarna>=2.7.0",
]

[dependency-groups]
dev = [
  "ipython>=9.6.0",
  "jupyterlab>=4.4.9",
  "pyright>=1.1.406",
  "pytest>=8.4.2",
  "ruff>=0.14.1",
]

[tool.ruff]

[tool.pyright]
include = ["tools"]

[tool.pytest.ini_options]
addopts = "--doctest-modules --ignore tools/scripts"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mRNArchitect = "tools.cli:cli"
